syntax = "proto3";

package laas.router.v1;

import "laas/v1/common.proto";

option go_package = "git.xdea.xyz/Turing/router/api/laas/v1;v1";

service Chat {
  rpc Chat(ChatReq) returns (ChatResp) {}
  rpc ChatStream(ChatReq) returns (stream ChatResp) {}
}

enum Role {
  SYSTEM = 0;
  USER = 1;
  MODEL = 2;
}

message Message {
  string id = 1;
  Role role = 2;
  repeated Content contents = 3;
}

message ChatReq {
  string id = 1;
  string model = 2;
  GenerationConfig config = 3;
  repeated Message messages = 4;
}

message ChatResp {
  string id = 1;
  Message message = 2;
  Statistics statistics = 3;
}
